--- a/titlePage/LADEQ.tex
+++ b/titlePage/LADEQ.tex
@@ -1,7 +1,7 @@
 \begin{titlepage}
 	\centering
 	\includegraphics[width=0.35\textwidth,trim={0 0 0 4cm}]{figuras/capa/index.png}\par\vspace{1cm}
-	{\LARGE\bfseries Relatório de Difusão}\par
+	{\LARGE\bfseries Relatório de Dinâmica}\par
 	\vspace{0.1cm}
 	{\Large Grupo:\par}
 	\vspace{0.01cm}
@@ -10,13 +10,14 @@
 	{\Large Kenia Souza \par}
 	{\Large Maykell Dias Medeiros\par}
 	{\Large Victor Carvalho Gomes \par}
+	{\Large Ailma Pereira \par}
 	{\Large \par}
 	\vspace{0.2cm}
 	%	{\LARGE\bfseries \par}
 	\vspace{1cm}
 	{\Large Professora:\par}
 	\vspace{0.01cm}
-	{\large Tânia Suaiden Klein, Ph.D.\par}
+	{\large Rossana Odette Mattos Folly, D.Sc.\par}
 	%	\vspace{0.1cm}
 	%	{\Large Coorientador\par}
 	%	\vspace{0.01cm}
