--- a/titlePage/LADEQ.tex
+++ b/titlePage/LADEQ.tex
@@ -1,23 +1,23 @@
 \begin{titlepage}
 	\centering
 	\includegraphics[width=0.35\textwidth,trim={0 0 0 4cm}]{figuras/capa/index.png}\par\vspace{1cm}
-	{\LARGE\bfseries Relatório de Dinâmica}\par
+	{\LARGE\bfseries Relatório de Fluidização}\par
 	\vspace{0.1cm}
 	{\Large Grupo:\par}
 	\vspace{0.01cm}
+	{\Large Ailma Pereira \par}
 	{\Large Eduardo Borges de Lima\par}
 	{\Large Guilherme Freire \par}
 	{\Large Kenia Souza \par}
 	{\Large Maykell Dias Medeiros\par}
 	{\Large Victor Carvalho Gomes \par}
-	{\Large Ailma Pereira \par}
 	{\Large \par}
 	\vspace{0.2cm}
 	%	{\LARGE\bfseries \par}
 	\vspace{1cm}
 	{\Large Professora:\par}
 	\vspace{0.01cm}
-	{\large Rossana Odette Mattos Folly, D.Sc.\par}
+	{\large Isabella Nascimento.\par}
 	%	\vspace{0.1cm}
 	%	{\Large Coorientador\par}
 	%	\vspace{0.01cm}
@@ -26,5 +26,5 @@
 	\vfill
 	
 	% Bottom of the page
-	{\large \today\par}
+	{\large Rio de Janeiro - RJ, \today\par}
 \end{titlepage}
